libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__expr-dangling-op.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected an expression, got '}' at 1:43
	  1 | value x: boolean { value = variables.a && }
	    |                                           ^
	- parse error: missing required 'version' directive
