libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__expr-none-literal.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {
            "optionalConfig": Value {
                value_type: Spanned {
                    value: Object,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 23,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 29,
                                },
                            ),
                        },
                    ),
                },
                value: None,
                description: None,
                secret: None,
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 21,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "optionalConfig": Span {
                start: Position {
                    line: 3,
                    column: 7,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 21,
                    },
                ),
            },
        },
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
